# ometrics

./: .gitignore  .gitlab-ci.yml  .gitmodules  CHANGES.md  LICENSE  Makefile  README.md  dune-project  mr.py  ometrics-core.opam  ometrics.opam
lib/: change.ml  change.mli  debug.ml  dune  entry.ml  git.ml  git.mli  implementation.ml  interface.ml  main.ml  misc.ml  monad.ml  monad.mli  report.ml  toplevel.ml
lib/analysis/: dune  entry.ml
lib/documentation/: dune  implementation.ml  interface.ml  misc.ml  toplevel.ml
lib/merlin/src/ocaml/preprocess/: menhirLib.ml  menhirLib.mli  parser_raw.ml
scripts/: run.sh
test/: dune  example.ml  example.mli  helpers.ml  test_change.ml  test_documentation.ml  test_entry.ml  test_git.ml  test_implementation.ml  test_interface.ml  test_main.ml  test_misc.ml  test_report.ml  test_toplevel.ml
test/cram/: clickable_flag.t  dune  entries.t  exclude_files.t  markdown.t  mli.t  report.t
