opam-version: "2.0"
version: "0.1"
maintainer: "Valentin Chaboche <valentin.chaboche@lambda-coins.com>"
homepage: "https://gitlab.com/nomadic-labs/ometrics"
bug-reports: "https://gitlab.com/nomadic-labs/ometrics/-/issues"
synopsis: "OCaml analysis in a merge request changes"
            
depends: [
  "ocaml" {>= "4.12" & < "4.13"}
  "yojson"
  "menhirSdk" {>= "20211012" & < "20211013"}
  "menhirLib" {>= "20211012" & < "20211013"}
  "menhir" {>= "20211012" & < "20211013"}
  "dot-merlin-reader"
  "csexp"
  "result"
  "cmdliner"
  "qcheck-alcotest" {with-test & >= "0.18"}
  "bisect_ppx" {dev & >= "2.6.0"}
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
authors: [
  "Thomas Letan <lthms@nomadic-labs.com>"
  "Valentin Chaboche <valentin.chaboche@lambda-coins.com>"
]
