opam-version: "2.0"
version: "0.2.0"
license: "MIT"
maintainer: "Valentin Chaboche <valentin.chaboche@lambda-coins.com>"
homepage: "https://gitlab.com/nomadic-labs/ometrics"
dev-repo: "git+https://gitlab.com/nomadic-labs/ometrics.git"
bug-reports: "https://gitlab.com/nomadic-labs/ometrics/-/issues"
synopsis: "OCaml analysis in a merge request changes"

depends: [
  "ocaml" {>= "4.12.0"}
  "dune" {>= "2.9.1"}
  "ppxlib" {>= "0.24.0"}
  "cmdliner" {>= "1.0.0"}
  "digestif" {>= "0.7.2"}
  "qcheck-alcotest" {with-test & >= "0.18"}
  "bisect_ppx" {dev & >= "2.6.0"}
]

build: [
  ["dune" "build" "-p" name "-j" jobs]
]
authors: [
  "Thomas Letan <lthms@nomadic-labs.com>"
  "Valentin Chaboche <valentin.chaboche@lambda-coins.com>"
]
